# glTF-Viewer

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
assets/: basic.fs  basic.vs
src/: editor_camera.h  input.cpp  input.h  main.cpp  main.odin
src/input/: input.odin
src/nodes/camera/: camera.odin
src/renderer/: animation_player.h  cgltf_helpers.odin  gl.h  gl.odin  gltf.h  gltf.odin  renderer.h  renderer.odin
src/renderer/gltf/: common.h  gltf.h  gltf.odin
src/window/: active_window.cpp  active_window.h  active_window_info.odin  window.h  window.odin
